--- a/auctions/static/sass/styles_sass.scss
+++ b/auctions/static/sass/styles_sass.scss
@@ -1917,6 +1917,10 @@ input {
   body {
     font-size: 0.8em;
   }
+  .popup-form {
+    width: 80vw;
+    left: 50vw;
+  }
   .title-container {
     width: 100%;
     text-align: center;
